@@ -14,7 +14,7 @@
 psxy \- Plot lines, polygons, and symbols on maps
 .SH SYNOPSIS
 \fBpsxy\fP \fIfiles\fP GMT_J_OPT GMT_Rgeo_OPT 
-[ OPT(A) ] [ GMT_B_OPT ] [ OPT(C)\fIcptfile\fP ] [ OPT(D)\fIdx\fP/\fIdy\fP ] [ OPT(E)[\fBx\fP|\fBy\fP|\fBX\fP|\fBY\fP][\fIcap\fP][/[\fB-\fP|\fB+\fP]\fIpen\fP] ] 
+[ OPT(A) ] [ GMT_B_OPT ] [ OPT(C)\fIcptfile\fP ] [ OPT(D)\fIdx\fP/\fIdy\fP ] [ OPT(E)[\fBx\fP|\fBy\fP|\fBX\fP|\fBY\fP][\fBn\fP][\fIcap\fP][/[\fB-\fP|\fB+\fP]\fIpen\fP] ] 
 [ OPT(G)\fIfill\fP ] [ GMT_H_OPT ] [ GMT_K_OPT ] [ OPT(L) ] 
 [ OPT(N) ] [ GMT_Mo_OPT ] [ GMT_O_OPT ] [ GMT_P_OPT ] [ OPT(S)[\fIsymbol\fP][\fIsize\fP] ] [ GMT_U_OPT ] 
 [ GMT_V_OPT ] [ OPT(W)[\fB-\fP|\fB+\fP][\fIpen\fP] ] [ GMT_X_OPT ] [ GMT_Y_OPT ] [ GMT_t_OPT ] [ GMT_c_OPT ] [ GMT_bi_OPT ] [ GMT_fi_OPT ]
@@ -62,6 +62,8 @@ A leading \fB+\fP will use the lookup color (via OPT(C)) for both symbol fill an
 If upper case \fBX\fP and/or \fBY\fP is used we will instead draw "box-and-whisker" (or "stem-and-leaf") symbols.  The x (or y)
 coordinate is then taken as the median value, and 4 more columns are expected to contain the minimum (0% quartile), the 25%
 quartile, the 75% quartile, and the maximum (100% quartile) values.  The 25-75% box may be filled by using \fB\-G\fP.
+If \fBn\fP is appended to \fBX\fP (or \fBY\fP) we draw a notched "box-and-whisker" symbol where the notch width reflects
+the uncertainty in the median.  Then a 5th extra data column is expected to contain the number of points in the distribution.
 .TP
 .B \-G
 Select color or pattern for filling of symbols or polygons [Default is no fill].
