@@ -1,6 +1,11 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.89 2007-09-24 16:22:43 remko Exp $
+	$Id: ChangeLog,v 1.90 2007-09-24 18:28:52 guru Exp $
 -----------------------------------------------------------------------------------------
+
+2007-09-24	pwessel
+	* psxy.c:		Box-and-whisker symbols can now optionally be of the notched
+				kind where a 5th data column holding the sample size must be present.
+				Activated by appending n to the X or Y in -E.
 
 2007-09-24	remko
 	* ???math.c:		Made self-documenting.
